--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <h1>DEMO for ng-infinite-calendar</h1>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/ng-infinite-calendar">source code</a></p>
+  <main>
+    <app-root>
+  </main>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/nic-demo">source code for demo</a></p>
 </body>
 </html>
