--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NicDemo</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.a7e10d305541bb9439ee.bundle.css" rel="stylesheet"/></head><body><h1>DEMO for ng-infinite-calendar</h1><p class="link-to-source-code"><a href="https://github.com/chase0213/ng-infinite-calendar">source code</a></p><main><app-root></app-root></main><p class="link-to-source-code"><a href="https://github.com/chase0213/nic-demo">source code for demo</a></p><script type="text/javascript" src="inline.8f21af35dc43f3cd4e5d.bundle.js"></script><script type="text/javascript" src="polyfills.b59a8422e26e64d12be4.bundle.js"></script><script type="text/javascript" src="vendor.d3a97495082c3579e0e8.bundle.js"></script><script type="text/javascript" src="main.004bed492a08fc25c824.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>NicDemo</title>
+  <base href=".">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+</head>
+<body>
+  <h1>DEMO for ng-infinite-calendar</h1>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/ng-infinite-calendar">source code</a></p>
+  <main>
+    <app-root>
+  </main>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/nic-demo">source code for demo</a></p>
+<script type="text/javascript" src="inline.bundle.js"></script><script type="text/javascript" src="polyfills.bundle.js"></script><script type="text/javascript" src="styles.bundle.js"></script><script type="text/javascript" src="vendor.bundle.js"></script><script type="text/javascript" src="main.bundle.js"></script></body>
+</html>
