--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NicDemo</title><base href="."><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.673a45bce35b4c3ee397.bundle.css" rel="stylesheet"/></head><body><h1>DEMO for ng-infinite-calendar</h1><p class="link-to-source-code"><a href="https://github.com/chase0213/ng-infinite-calendar">source code</a></p><main><app-root></app-root></main><p class="link-to-source-code"><a href="https://github.com/chase0213/nic-demo">source code for demo</a></p><script type="text/javascript" src="inline.8f21af35dc43f3cd4e5d.bundle.js"></script><script type="text/javascript" src="polyfills.b59a8422e26e64d12be4.bundle.js"></script><script type="text/javascript" src="vendor.d3a97495082c3579e0e8.bundle.js"></script><script type="text/javascript" src="main.004bed492a08fc25c824.bundle.js"></script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>NicDemo</title>
+  <base href=".">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="styles.fd6d3a48bdee1c60cbd5.css"></head>
+<body>
+  <h1>DEMO for ng-infinite-calendar</h1>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/ng-infinite-calendar">source code</a></p>
+  <main>
+    <app-root>
+  </main>
+  <p class="link-to-source-code"><a href="https://github.com/chase0213/nic-demo">source code for demo</a></p>
+<script type="text/javascript" src="runtime.b57bf819d5bdce77f1c7.js"></script><script type="text/javascript" src="polyfills.73d95d6ccbfb00be9013.js"></script><script type="text/javascript" src="main.07ae70b16bdd26f9ddcb.js"></script></body>
+</html>
